--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "nuxt": "^4.0.3",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.18",
+    "vue-component-type-helpers": "^3.0.5",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@nuxt/eslint": "1.8.0",
     "@tailwindcss/typography": "^0.5.16",
     "eslint": "^9.0.0",
-    "@nuxt/eslint": "1.8.0",
     "typescript": "^5.9.2",
     "vue-tsc": "^3.0.1"
   }
