--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@nuxt/content": "3.6.3",
-    "@nuxt/fonts": "0.11.4",
     "@nuxt/eslint": "1.8.0",
+    "@nuxt/fonts": "0.11.4",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.12",
+    "better-sqlite3": "^12.2.0",
     "nuxt": "^4.0.3",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.18",
